src/app/gallery/gallery_styles.css
.gallery {
    background: url("../../app/images/brickwall.png");
    overflow: hidden;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.gallery--loader{
    margin-top: 100px;
}

.galleryHome{
    /*padding-bottom: 80px;*/
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    background: url("../../app/images/brickwall.png");
}

.gallery--header{
    /*background-color: rgba(255, 255, 0, 0.4);*/
    font-weight: 700;
    color: rgba(0, 0, 0, 0.7);
    font-family: 'Stardos Stencil', cursive;
    padding: 110px 10px 40px 10px;
    text-align: center;

    /*padding: 20px 0 15px 0;*/
    /*margin-top: 42px;*/
    border-top: 1px solid rgba(255, 255, 255,0.6);
    border-bottom: 1px solid rgba(0,0,0,0.1);
    background-color: rgba(255, 255, 255, 0.4);
}

.gallery--title {
    font-size: 4rem;
    line-height: 4rem;
    margin: 0 0 10px 0;
    /*
    font-family: 'Rubik', sans-serif;
    font-weight: 900;
    */
    /*font-family: 'Black Ops One', cursive;
    font-weight: normal;
    */
}

.gallery--subtitle {
    /*background-color: rgba(255, 255, 0, 0.5);*/
    font-size: 2.5rem;
    line-height: 2.5rem;
    margin: 0;
}

.gallery--artworkThumbs{
    margin: 2rem 0 85px 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.gallery--sizePlaceholder {
    flex: 1;
    /*background-color: red;*/
    position: relative;
}

.gallery--controls {
    z-index: 1;
    position: fixed;
    bottom: 0;
    left: 0;
    right:0;
    border-top: 1px solid rgba(0, 0, 0, 0.2);
    height: 60px;
    background-color: whitesmoke;
    display: flex;
    justify-content: center;
    align-items: center;
}

.gallery--controls--backToGalleryButt {
    /*align-self: left;*/
}

.gallery--framedArtwork {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 70px;

    display: flex;
    align-items: center;
    justify-content: center;

    /*background-color: #6cdfea;*/
}

@media only screen and (max-width: 600px) {
    .gallery--title {
        font-size: 3rem;
        line-height: 3rem;
    }

    .gallery--subtitle {
        font-size: 1.5rem;
        line-height: 2rem;
    }
}

